--- a/style.css
+++ b/style.css
@@ -1,88 +1,89 @@
-*{
-    box-sizing: border-box;
+body{
+  background-color: rgb(1, 1, 26);
+  color: rgb(255, 255, 255);
 }
 
-.header{
-    background-color: red;
-    padding: 30px 40px;
-    color: white;
-    text-align: center;
+h1{
+  font-size: 35px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
+  margin: 10;
+  font-weight: bold;
+  line-height: 60px;
+  padding: 0;
 }
 
-.header:after{
-    content: "";
-    display: table;
-    clear: both;
+.stopwatch{
+  display: grid;
+  justify-items: center;
+  grid-row-gap: 25px;
+  width: 100%;
 }
 
-#input{
-    padding: 10px;
-    width: 75%;
-    font-style: italic;
-    font-size: 20px;
-    float: left;
+.square{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+  font-family: monospace;
+    
+  height: 100px;
+  width: 400px;
+    
+  border: 5px solid white;
+  border-radius: 20%;
+}
+  
+button{
+  background: transparent;
+  border: none; 
+  padding: 30;
+  cursor: grabbing;
+  background-size: 70px 70px;
 }
 
-.btn{
-    padding: 10px;
-    width: 25%;
-    background-color: rgb(146, 143, 143);
-    text-align: center;
-    font-size: 20px;
-    cursor: pointer;
-    transition: 0.3s;
-    float: left;
+.controls {
+  display: flex;
+  width: 100px;
+  justify-content: space-evenly;
 }
 
-.btn:hover{
-    background-color: rgb(143, 5, 5);
-    color: white;
+#playButton{
+  margin: 10px 5px;
+  font-size: 15px;
+  font-weight: bold;
+  color: rgb(1, 1, 75);
+  background: white;
+  border-radius: 5px;
+  padding: 20px;
+  cursor: pointer;
 }
 
-ul{
-    margin-top: 20px;
-    padding: 0;
+#pauseButton{
+  margin: 10px 5px;
+  font-size: 15px;
+  font-weight: bold;
+  color: rgb(1, 1, 75);
+  background: white;
+  border-radius: 5px;
+  padding: 20px;
+  cursor: pointer;
 }
 
-li{
-    background: rgb(228, 228, 228);
-    font-size: 25px;
-    padding: 10px;
-    cursor: pointer;
-    position: relative;
-    transition: 0.2s;
-    user-select: none;
+#resetButton{
+  margin: 10px 5px;
+  font-size: 15px;
+  font-weight: bold;
+  color: rgb(1, 1, 75);
+  background: white;
+  border-radius: 5px;
+  padding: 20px;
+  cursor: pointer;
 }
 
-li:nth-child(even){
-    background: rgb(182, 180, 180);
-}
-
-
-li:nth-child(even):hover{
-    background-color: rgb(143, 5, 5);
-    color: white;
-}
-
-li.checked {
-  background: #888;
-  color: #fff;
-  text-decoration: line-through;
-}
-
-li:hover{
-    background-color: red;
-    opacity: 0.5;
-    color: white;
-}
-
-.close{
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding: 12px 16px 12px 16px;
-}
-
-.close:hover{
-    color: black;
+footer{
+  text-align: right;
+  margin-top: 140px;
+  margin-right: 20px;
+  margin-bottom: 0;
 }
